# AutomotiveDashboard

./: .gitignore  CMakeLists.txt  README.md  main.cpp  qml.qrc
c++/include/: dashboarddata.h
c++/src/: dashboarddata.cpp
qml/: Main.qml  demi.txt
qml/components/: BarIndicator.qml  Speedometer.qml
themes/: DarkTheme.qml  LightTheme.qml
